--- a/cfp-app/src/index.html
+++ b/cfp-app/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Call for Papers | Code Talks 2019</title>
+  <title>CfpApp</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
